# DocMind

./: .dockerignore  .env.example  .gitignore  CHANGELOG_LANGCHAIN.md  CLAUDE.md  Dockerfile  INSTALL.md  LANGCHAIN_SETUP.md  README.docker.md  README.md  plan.txt  pyproject.toml  requirements.txt  test2.docx
app/: config.py  embeddings.py  main.py  qdrant_client.py  schemas.py
app/chunking/: __init__.py  base.py  paragraph.py  recursive.py
app/langchain_integration/: __init__.py  schemas.py  summarizer.py  vector_store.py
app/scripts/: doc_to_text.py
